# blackhole-sim

./: .gitignore  AGENTS.md  README.md
native/core/: Cargo.toml  pyproject.toml
python/: CITATIONS.md  README.md  TEST_EVIDENCE_v0_5_0_FULL_SUITE.md  TEST_EVIDENCE_v0_6_0_ACCELERATOR_SUITE.md  TEST_EVIDENCE_v0_7_0_HOT_LOOP_PORT.md  per_file_times.txt  pyproject.toml
python/blackhole_sim/: __init__.py  accelerated_cli.py  accelerated_renderer.py  accelerator.py  accelerator_cli.py  benchmark.py  benchmark_cli.py  calibration.py  cli.py  coefficient_bricks.py  coefficient_bricks_cli.py  external_validation.py  external_validation_cli.py  geodesics.py  grmhd.py  grmhd_adapters.py  grrt_cli.py  grrt_renderer.py  kerr.py  kerr_renderer.py  native_kernels.py  native_loader.py  physics.py  plasma.py  platform_probe.py  polarized_cli.py  polarized_renderer.py  polarized_transfer.py  public_dump_cli.py  public_dumps.py  radiative_transfer.py  regression_cli.py  relativistic_plasma.py  renderer.py  snapshot_cli.py  synchrotron.py  tiles.py  webgpu_regression.py
python/examples/: generate_grmhd_snapshot.py  plasma_compare.py  render_blackhole.py  render_grrt_volume.py  render_kerr_blackhole.py  validate_relativistic_pushers.py
python/notebooks/: public_dump_ipole_validation.ipynb
python/tests/: test_accelerated_renderer.py  test_accelerator.py  test_benchmark.py  test_calibration.py  test_coefficient_bricks.py  test_external_validation.py  test_geodesics.py  test_grmhd.py  test_grmhd_adapters.py  test_grrt_renderer.py  test_kerr.py  test_native_kernel_assets.py  test_native_sampler_parity.py  test_native_stokes_parity.py  test_plasma.py  test_platform_probe.py  test_polarized_renderer.py  test_public_dumps.py  test_radiative_transfer.py  test_relativistic_plasma.py  test_synchrotron_polarized_transfer.py  test_tiles.py  test_webgpu_regression.py  (+2 more)
(+32 files in other folders)
